# mlops_project

./: .gitignore  .pre-commit-config.yaml  Makefile  data.dvc  data.py  environment.yaml  main.py  model.py  my_logger.py  output.py  pyproject.toml  requirements_tests.txt  requirments.txt  test.py  torch_profiler.py  trace.json  typing_exercise.py  vae_mnist_bugs.py  vae_mnist_working.prof
.dvc/: config
.github/workflows/: tests.yaml
checkpoints/: mnist-epoch=03-val_loss=0.10-v1.ckpt  mnist-epoch=03-val_loss=0.10.ckpt  mnist-epoch=03-val_loss=0.12.ckpt  mnist-epoch=04-val_loss=0.09-v1.ckpt  mnist-epoch=04-val_loss=0.09-v2.ckpt  mnist-epoch=04-val_loss=0.09.ckpt  mnist-epoch=05-val_loss=0.09-v1.ckpt  mnist-epoch=05-val_loss=0.09-v2.ckpt  mnist-epoch=05-val_loss=0.09.ckpt
data/processed/: train_target.pt
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
log/resnet18_memory/: LMMISTA-CIP-230_6460.1716742597528382400.pt.trace.json
project_name/: __init__.py
project_name/data/: make_dataset.py
tests/: __init__.py
wandb/: settings
wandb/run-20240530_171626-iq9xqs1i/: run-iq9xqs1i.wandb
wandb/run-20240530_172611-g2vqk3sp/: run-g2vqk3sp.wandb
wandb/run-20240530_172638-pej3eo0f/: run-pej3eo0f.wandb
wandb/run-20240530_172824-3i4z7em1/: run-3i4z7em1.wandb
wandb/run-20240602_160254-91qqio53/: run-91qqio53.wandb
wandb/run-20240602_162620-aw66g7th/: run-aw66g7th.wandb
wandb/run-20240602_163005-w4gy69by/: run-w4gy69by.wandb
wandb/run-20240602_163038-hup7wgl4/: run-hup7wgl4.wandb
(+45 files in other folders)
