[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "MLOps"
version = "0.1.0"
description = "This is a project to learn techniques for deployment of data science and machine learning projects"
authors = [
    { name = "Ali Najibpour Nashi", email = "ali.najibpour68@gmail.com" }
]
license = { text = "MIT" }

[project.dependencies]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.4"
]

[tool.ruff]

line-length = 120

[tool.ruff.lint]

select = ["I"]
